{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "DefaultActionMap",
            "id": "9bc7691d-1fad-4d35-9ace-89b7e11c656d",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "33a4c582-7ce0-489a-a73b-89be35f1af1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "38741559-e471-41e3-9508-589aa4592348",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SideMovement",
                    "type": "Button",
                    "id": "4e365484-4073-4a37-8669-c4685b88761f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "73cd9ee3-fd19-4cae-b92d-834b01b51a5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RollDown",
                    "type": "Button",
                    "id": "e7aec887-d99e-4f05-b841-ec3017f55fc6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2011b7d3-7db1-464f-a2cd-7ef88fde1767",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchInputScheme",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3551121-c0b5-484c-841d-c03ce03770c0",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchInputScheme",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "83867d7d-26a1-46ff-b2aa-3b9c09546058",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "76d388f5-c4dc-4ec5-a9b0-77d4c6b8d670",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchInputScheme",
                    "action": "SideMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e7f057d5-e5cc-4366-953a-8ca003825ea5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchInputScheme",
                    "action": "SideMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cebf51b0-baa7-408e-b32e-608dc7d75183",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchInputScheme",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d67133a-8f31-436f-9d9a-6791e6e1de3d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchInputScheme",
                    "action": "RollDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "TouchInputScheme",
            "bindingGroup": "TouchInputScheme",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}